--- a/Kuis_1_SVM Linear.ipynb
+++ b/Kuis_1_SVM Linear.ipynb
@@ -466,7 +466,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Pembagain 80:20"
+        "# Pembagian 80:20"
       ],
       "metadata": {
         "id": "0M_Zp9Y-1fM3"
