--- a/Kuis_1_SVM Linear.ipynb
+++ b/Kuis_1_SVM Linear.ipynb
@@ -139,7 +139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# pembagian 70: 30"
+        "# Pembagian 70: 30"
       ],
       "metadata": {
         "id": "kuVn7wp41V0B"
